--- a/css/style.css
+++ b/css/style.css
@@ -20,11 +20,16 @@ body {
 
 /* GENERAL */
 
+.inp {
+  padding: 1.7rem 1.9rem;
+  border: 0.1rem solid #cecece;
+}
+
 .btn {
   color: #fff;
   background-color: #242742;
   font-weight: 600;
-  padding: 1.6rem;
+  padding: 1.7rem;
   cursor: pointer;
   border: none;
 }
@@ -57,7 +62,7 @@ body {
   font-weight: 800;
 }
 
-.subscription-input,
+.inp,
 .btn {
   border-radius: 0.7rem;
 }
@@ -81,7 +86,7 @@ body {
   background-color: #fff;
   height: 55rem;
   width: 79.8rem;
-  margin: 19rem auto 0 auto;
+  margin: 20rem auto 0 auto;
 }
 
 .subscription-information {
@@ -127,8 +132,10 @@ body {
 
 .subscription-input {
   margin-bottom: 1.8rem;
-  border: 0.1rem solid #cecece;
-  padding: 1.6rem 1.9rem;
+}
+
+.subscription-input:focus {
+  outline: none;
 }
 
 .subscription-input::placeholder {
@@ -175,10 +182,12 @@ body {
 
 /* 848px / 16 = 53 */
 @media (max-width: 53em) {
+  .subscription-container {
+    flex-direction: column;
+  }
+
   .subscription-container,
   .success-container {
-    display: flex;
-    flex-direction: column;
     height: 84rem;
     width: 37.6rem;
     margin: 4.4rem auto 0 auto;
@@ -249,8 +258,7 @@ body {
 
   .success-information {
     order: 2;
-    padding: 3.1rem 2.4rem 2.4rem 2.4rem;
-    margin-top: 13.2rem;
+    padding: 10rem 2.4rem 2.4rem 2.4rem;
   }
 
   .success-icon {
